# flask_blog

./: blog.db  pyproject.toml
src/flask_blog/db/: __init__.py  config.py
src/flask_blog/db/models/: __init__.py  author.py  post.py
src/flask_blog/routes/: __init__.py  author.py  post.py
src/flask_blog/templates/: __base.html  create_post.html  delete_posts.html  edt.html  index.html  posts.html
